@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add verbosity Diagnostic
     Improve FilePath.normalise
     Add writeFileChanged
     Add systemOutput
